Fix overlapping controls in the Inline Image formatting toolbar

--- a/packages/format-library/src/image/style.scss
+++ b/packages/format-library/src/image/style.scss
@@ -15,7 +15,13 @@
 	min-width: 150px;
 	max-width: 500px;
 
-	&.components-base-control .components-base-control__field {
-		margin-bottom: 0;
+	&.components-base-control {
+		.components-base-control__field {
+			margin-bottom: 0;
+		}
+
+		.components-base-control__label {
+			display: block;
+		}
 	}
 }
